Libraries and dependencies updated to work with local libs -> to be fixed in the next unified repo.